#106 [Sankar/Vidhya] Fix for Spacing Issues in Dropdown

--- a/core/static/css/v2/main.less
+++ b/core/static/css/v2/main.less
@@ -152,6 +152,15 @@
   #holder {
     overflow: hidden;
   }
+
+  .dropdown.custom-dropdown {
+  &.open > .dropdown-menu {
+
+    li {
+      padding: 8px 10px;
+    }
+  }
+}
 }
 
 // common styles
