--- a/core/static/css/v2/two_column_grid.less
+++ b/core/static/css/v2/two_column_grid.less
@@ -208,11 +208,20 @@
 
         & > a, & > .caption {
           width: 100% !important;
-
           h3 {
             margin-top: 10px !important;
           }
         }
+        .caption {
+        .dropdown.custom-dropdown {
+          &.open > .dropdown-menu {
+            li {
+                margin: 10px 0px;
+                padding: 20px 10px 5px 10px;
+            }
+          }
+        }
+   }
       }
     }
   }
